# pdf-document-layout-analysis

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gradio  Dockerfile.ollama  Makefile  README.md  dev-requirements.txt  docker-compose-gpu.yml  docker-compose-no-gpu.yml  docker-compose.yml  fine_tuning_lightgbm_models.ipynb  justfile  pyproject.toml  requirements-gradio.txt  requirements.txt  run.bat  run.ps1  setup.py  start.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: push_docker_image.yml  test.yml
.well-known/: funding-manifest-urls
src/: PdfImages.py  analyze_pdf.py  analyze_pdf_fast.py  app.py  configuration.py  create_word_grid.py  download_models.py  get_json_annotations.py  get_model_configuration.py  get_most_probable_pdf_segments.py  get_reading_orders.py  gradio_app.py  run.py  test_end_to_end.py
src/bros/: configuration_bros.py
src/data_model/: PdfImages.py  Prediction.py  SegmentBox.py
src/ditod/: VGTTrainer.py  dataset_mapper.py
src/domain/: PdfImages.py  PdfSegment.py  Prediction.py  SegmentBox.py
src/drivers/: gradio_app.py
src/extraction_formats/: extract_formula_formats.py  extract_table_formats.py
src/fast_trainer/: ParagraphExtractorTrainer.py  PdfSegment.py
src/ocr/: languages.py  ocr_pdf.py
src/pdf_features/: HyperlinkStyle.py  ListLevel.py  PdfFeatures.py  PdfFont.py  PdfModes.py  PdfPage.py  PdfToken.py  PdfTokenContext.py  PdfTokenStyle.py  Rectangle.py  ScriptType.py  TitleStyle.py  TitleType.py
src/pdf_layout_analysis/: get_xml.py  run_pdf_layout_analysis.py  (+1 more)
test_pdfs/: toc-test.xml
(+111 files in other folders)
