[project]
name = "pdf-document-layout-analysis"
version = "2026.04.28.01"
description = "This tool is for PDF document layout analysis"
license = { file = "LICENSE" }
authors = [{ name = "HURIDOCS" }]
requires-python = ">= 3.10"
dependencies = [
    "fastapi==0.136.1",
    "pydantic==2.13.3",
    "python-multipart==0.0.27",
    "uvicorn==0.46.0",
    "gunicorn==25.3.0",
    "requests==2.33.1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "Pillow==12.2.0",
    "pdf-annotate==0.12.0",
    "scipy==1.17.1",
    "opencv-python==4.13.0.92",
    "Shapely==2.1.2",
    "transformers==5.6.2",
    "huggingface_hub==1.12.0",
    "pdf2image==1.17.0",
    "lightgbm==4.6.0",
    "setuptools==75.4.0",
    "roman==5.2",
    "hydra-core==1.3.2",
    "pypandoc==1.17",
    "rapid-table==3.0.2",
    "rapidocr==3.8.1",
    "pix2tex==0.1.4",
    "latex2mathml==3.81.0",
    "PyMuPDF==1.27.2.3",
    "ollama==0.6.1",
    "cachetools==7.0.6",
    "pdf-features @ git+https://github.com/huridocs/pdf-features.git@2026.4.27.1"
]

[project.urls]
HURIDOCS = "https://huridocs.org"
GitHub = "https://github.com/huridocs/pdf-document-layout-analysis"
HuggingFace = "https://huggingface.co/HURIDOCS/pdf-document-layout-analysis"
DockerHub = "https://hub.docker.com/r/huridocs/pdf-document-layout-analysis"

[tool.black]
line-length = 125
target-version = ["py311"]